--- a/service.yml
+++ b/service.yml
@@ -5,8 +5,8 @@ metadata:
 spec:
     type: NodePort
     selector:
-       app: badri-pod-template
+       app: badri-prod
     ports:
      - nodePort: 30090
-       port: 80
-       targetPort: 80
+       port: 8080
+       targetPort: 8080
